--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
     text-align: center;
 }
 
-#tsparticles {
-    height: 400px;
+.navbar-background-img {
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("./images/banner.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
