--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,11 @@
 @tailwind utilities;
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    @font-face {
+        font-family: "calibre";
+        src: local("calibre"), url("../src/calibre/CalibreBold.otf") format("truetype");
+        font-weight: bold;
+    }
 }
 
 code {
