--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,10 @@
     background-position: center;
     background-repeat: no-repeat;
 }
+
+.about-bg-img {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./images/bg.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
