--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,16 @@
     background-position: center;
     background-repeat: no-repeat;
 }
+
+
+/* ---project section--- */
+
+.project-img-box:hover img {
+    transition: 0.3s linear;
+    opacity: 0.3;
+}
+
+.project-img-box:hover .item {
+    transition: all;
+    display: flex;
+}
